test/compile-fail/resolution/type-existence/ambiguous-item/expected.txt
error: the name `d` is defined multiple times
 --> top.rhdl:6:7
  |
5 | enum d {}
  |      - previous definition of the name `d` here
6 | struct d {}
  |        ^ `d` redefined here
error: `d` is ambiguous (item versus other items found during resolution)
 --> top.rhdl:2:7
  |
2 |     b: d,
  |        ^ ambiguous name
error: `d` is ambiguous (item versus other items found during resolution)
 --> top.rhdl:3:7
  |
3 |     c: d,
  |        ^ ambiguous name
